syntax ="proto3";
package user;
import "proto/dbmodel/dbmodel.proto";
import "proto/dbmodel/model.proto";
service UserSrv{
  rpc Registry(RegistryReq)returns(dbmodel.Id){} //注册
  rpc ChangePassword(ChangePasswordReq)returns(dbmodel.Id){}//修改密码
  rpc UserInfoList(UserInfoListReq)returns(dbmodel.PageResp){}//分页查询用户
  rpc EditUser(dbmodel.SysUser)returns(dbmodel.Id){}//编辑用户
  rpc UserById(dbmodel.Id)returns(dbmodel.SysUser){}//查询用户
}
//用户注册请求
message RegistryReq{
  //dbmodel.UserType user_type=6;//用户类型（注册通道）
  string user_name=1;//用户名
  string user_password=2;//密码
  string user_password_again=3;//确认密码
  string user_phone=4;//电话
  string user_phone_code=5;//验证码
  string user_type_code=6;//用户类型（注册通道）
}
//修改密码
message ChangePasswordReq{
  int64 id=1;
  string user_password=2;//密码
  string user_password_again=3;//确认密码
}

message UserInfoListReq{
  dbmodel.PageReq page_req=1;
  string user_name=3;//用户名(查询条件)
  string user_phone=4;//电话(查询条件)
  string user_email=5;//邮箱(查询条件)
}